# any-converter

./: .editorconfig  .eslintrc.json  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  README-zh.md  README.md  config.example.toml  package.json  pnpm-lock.yaml
.githooks/: pre-commit  pre-push
apps/: AGENTS.md
apps/desktop/: AGENTS.md  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  secrets.rs  server_manager.rs  state.rs
apps/desktop/src-tauri/tests/: config_builder.rs
apps/desktop/src/components/layout/: AppShell.tsx  ErrorBanner.tsx  Field.tsx  Header.tsx  Sidebar.tsx  Table.tsx  nav-icons.tsx
apps/desktop/src/hooks/: useAsyncState.ts
apps/desktop/src/lib/: api.ts  constants.ts  create-desktop-api-client.ts
apps/desktop/src/pages/: DashboardPage.tsx  LogsPage.tsx  PlaygroundPage.tsx  ProvidersPage.tsx  RoutesPage.tsx  SettingsPage.tsx  UsagePage.tsx
apps/desktop/src/types/: index.ts
apps/web/: AGENTS.md  next.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/app/: layout.tsx
apps/web/src/app/api/: log-store.ts
apps/web/src/app/api/config/: route.ts
apps/web/src/app/api/convert/: route.ts
apps/web/src/app/api/logs/: route.ts
apps/web/src/app/api/status/: route.ts
apps/web/src/app/api/usage/: route.ts
apps/web/src/app/config/: page.tsx
apps/web/src/app/logs/: page.tsx
apps/web/src/app/playground/: page.tsx
apps/web/src/app/status/: page.tsx
apps/web/src/app/usage/: page.tsx
apps/web/src/components/: app-providers.tsx  navigation.tsx
crates/: AGENTS.md
crates/cli/: AGENTS.md  Cargo.toml
crates/cli/src/: disk_manager.rs  logging.rs  main.rs
crates/cli/tests/: cli_integration.rs
crates/core/: AGENTS.md  Cargo.toml
crates/core/benches/: conversion_bench.rs
crates/core/src/: convert.rs  error.rs  lib.rs  sse.rs
crates/core/src/converters/: chat_to_claude.rs  chat_to_gemini.rs  chat_to_resp.rs  claude_to_chat.rs  claude_to_gemini.rs  claude_to_resp.rs  gemini_to_chat.rs  gemini_to_claude.rs  gemini_to_resp.rs  mod.rs  reasoning.rs  resp_to_chat.rs  resp_to_claude.rs  resp_to_gemini.rs  shared.rs
crates/core/src/formats/: mod.rs
crates/core/src/formats/claude/: adapter.rs  adapter_tests.rs  helpers.rs  mod.rs  stream.rs  types.rs
crates/core/src/formats/gemini/: adapter.rs  adapter_tests.rs  mod.rs  stream.rs  tools.rs  types.rs
crates/core/src/formats/openai_chat/: adapter.rs  adapter_tests.rs  mod.rs  stream.rs  tools.rs  types.rs
crates/core/src/formats/openai_resp/: adapter.rs  adapter_tests.rs  helpers.rs  mod.rs  stream.rs  tools.rs  types.rs
crates/core/src/ir/: message.rs  mod.rs  params.rs  request.rs  response.rs  stream.rs  tool.rs
crates/core/tests/: concurrent_tests.rs  converter_matrix.rs  error_paths.rs  fuzz_tests.rs  parameter_mapping.rs  property_tests.rs  response_deep.rs  roundtrip.rs  stream_matrix.rs
crates/core/tests/common/: mod.rs
crates/core/tests/fixtures/claude/: request_image.json  request_multi_turn.json  request_simple.json  request_system_message.json  request_thinking.json  request_tools.json  response_simple.json  response_tools.json  stream_text.sse  stream_tool_use.sse
crates/core/tests/fixtures/gemini/: request_multi_turn.json  request_simple.json  request_tools.json  response_simple.json  response_tools.json  stream_function_call.sse  stream_text.sse
crates/core/tests/fixtures/openai_chat/: request_image.json  request_multi_turn.json  request_reasoning.json  request_simple.json  request_system_message.json  request_tools.json  response_simple.json  response_tools.json  stream_text.sse  stream_tool_calls.sse
crates/core/tests/fixtures/openai_resp/: request_multi_turn.json  request_reasoning.json  request_simple.json  request_tools.json  response_simple.json  response_tools.json  stream_text.sse  stream_tool_calls.sse
crates/server/: AGENTS.md  Cargo.toml
crates/server/src/: auth.rs  config.rs  disk_quota.rs  handlers.rs  lib.rs  logging.rs  model.rs  namespace.rs  observability.rs  proxy.rs  request_log.rs  route_strategy.rs  router.rs  storage.rs  usage.rs
crates/server/src/request_log/: redactor.rs
crates/server/tests/: api_integration.rs  proxy_integration.rs  request_log_integration.rs  sqlite_storage.rs  stress_test.rs
crates/web-bridge/: AGENTS.md  Cargo.toml
crates/web-bridge/src/: lib.rs
docs/: AGENTS.md  architecture.md  build.md  onboarding.md
docs/design/: 2026-07-22-conservative-log-sessions-plan.md  any-converter.md  desktop_design.md
docs/memory/: AGENTS.md  project_context.md
docs/references/: api.md  ascii.md
docs/references/claude/: claude-guide.md  command.md  env.md  guide.md  hooks.md  mcp-config.md
scripts/: AGENTS.md  om-any-converter-tunnel.sh
tests/: AGENTS.md
