[workspace]
members = ["crates/core", "crates/server", "crates/cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "net",
  "sync",
  "time",
] }
axum = { version = "0.8", default-features = false, features = [
  "tokio",
  "http1",
  "json",
  "query",
] }
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "stream",
  "json",
  "gzip",
  "brotli",
  "system-proxy",
] }
toml = "0.8"
log = { version = "0.4", features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
any-converter-core = { path = "crates/core" }
any-converter-server = { path = "crates/server" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

# Code quality - deny in production code
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
print_stdout = "deny"
print_stderr = "deny"

# Style - allow these to reduce noise
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
module_inception = "allow"

# Complexity
type_complexity = "allow"
