[package]
name = "any-converter"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CLI tool for LLM API format conversion and proxy serving"

[[bin]]
name = "any-converter"
path = "src/main.rs"

[dependencies]
any-converter-core = { workspace = true }
any-converter-server = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
