[package]
name = "any-converter-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core conversion library for LLM API format interconversion"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[[bench]]
name = "conversion_bench"
harness = false

[lints]
workspace = true
