[package]
name = "any-converter-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "HTTP proxy server for LLM API format conversion"

[dependencies]
any-converter-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
toml = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures-util = "0.3"
tokio-stream = "0.1"
http-body-util = "0.1"

[dev-dependencies]
tokio = { workspace = true }
pretty_assertions = "1"
tower = "0.5"

[lints]
workspace = true
