[package]
name = "web-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
any-converter-core = { workspace = true }
napi = { version = "2", default-features = false, features = ["napi8"] }
napi-derive = "2"
serde_json = { workspace = true }

[build-dependencies]
napi-build = "=2.2.1"
